--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,7 @@ body{
     font-family: 'Poppins', sans-serif;
     background: rgb(230, 227, 227);
 }
+header{
+    background: rgb(245, 199, 222);
+    margin: 10;
+}
